--- a/.github/workflows/merge-rules.yml
+++ b/.github/workflows/merge-rules.yml
@@ -50,7 +50,7 @@ jobs:
         # 支持的规则类型
         valid_rule_types = {
             'DOMAIN', 'DOMAIN-SUFFIX', 'DOMAIN-KEYWORD', 
-            'IP-CIDR', 'IP-CIDR6', 'USER-AGENT', 'PROCESS-NAME'
+            'IP-CIDR', 'IP-CIDR6', 'USER-AGENT', 'PROCESS-NAME', 'IP-ASN'
         }
         
         def is_valid_rule(line):
