--- a/.github/workflows/merge-rules.yml
+++ b/.github/workflows/merge-rules.yml
@@ -34,23 +34,23 @@ jobs:
 
           # 国内规则源列表
           china_rule_sources = [
-              "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/China/China.list",
+              "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/China/China.list",
               "https://raw.githubusercontent.com/blueskycrb/ios_surge/refs/heads/main/cn.list",
-              "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaASN/ChinaASN.list"
+              "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/ChinaASN/ChinaASN.list"
           ]
 
           # 国外规则源列表
           proxy_rule_sources = [
-              "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Telegram/Telegram.list",
-              "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/YouTube/YouTube.list",
+              "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Telegram/Telegram.list",
+              "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/YouTube/YouTube.list",
               "https://raw.githubusercontent.com/blueskycrb/ios_surge/refs/heads/main/us.list",
-              "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/TikTok/TikTok.list",
-              "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Twitter/Twitter.list",
-              "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Google/Google.list",
-              "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Instagram/Instagram.list",
-              "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Facebook/Facebook.list",
-              "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/PayPal/PayPal.list",
-              "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Proxy/Proxy.list",
+              "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/TikTok/TikTok.list",
+              "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Twitter/Twitter.list",
+              "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Google/Google.list",
+              "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Instagram/Instagram.list",
+              "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Facebook/Facebook.list",
+              "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/PayPal/PayPal.list",
+              "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Proxy/Proxy.list",
               "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Epic/Epic.list",
               "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Steam/Steam.list"
           ]
@@ -121,19 +121,28 @@ jobs:
                   f.write("\n".join(output_lines))
               print(f"{rule_type} 规则生成完成！总共 {len(sorted_rules)} 条规则")
 
-          # ⭐ 生成 Mihomo 格式的文件
-          def generate_mihomo_format(rules, filename, is_china=True):
-              formatted_rules = []
-              suffix = 'DIRECT' if is_china else 'Proxy'
-              for rule in rules:
-                  parts = rule.split(',')
-                  if len(parts) >= 2:
-                      formatted_rules.append(f"{parts[0]},{parts[1]},{suffix}")
-              with open(filename, 'w', encoding='utf-8') as f:
+          def generate_mihomo_format(china_rules, proxy_rules):
+              mihomo_rules = []
+
+              # 国内规则加入 ,DIRECT
+              for rule in china_rules:
+                  if rule.startswith('USER-AGENT'):
+                      continue  # 不处理 USER-AGENT 规则
+                  mihomo_rules.append(f"{rule},DIRECT")
+
+              # 国外规则加入 ,Proxy
+              for rule in proxy_rules:
+                  if rule.startswith('USER-AGENT'):
+                      continue  # 不处理 USER-AGENT 规则
+                  mihomo_rules.append(f"{rule},Proxy")
+
+              # 合并国内和国外规则，保存为 mihomo.list
+              with open("mihomo.list", "w", encoding="utf-8") as f:
                   f.write("rules:\n")
-                  for rule in formatted_rules:
+                  for rule in mihomo_rules:
                       f.write(f"  - {rule}\n")
-              print(f"Mihomo 格式规则生成完成！文件名: {filename}, 总共 {len(formatted_rules)} 条规则")
+
+              print("mihomo 格式规则生成完成！总共 {len(mihomo_rules)} 条规则")
 
           # 处理国内规则
           print("=== 开始处理国内规则 ===")
@@ -146,11 +155,7 @@ jobs:
           # ⭐ 加入去重
           china_rules = dedupe_no_resolve_priority(china_rules)
 
-          # 生成标准规则文件
           generate_rule_file(china_rules, 'china.list', 'China')
-
-          # 生成 Mihomo 格式文件
-          generate_mihomo_format(china_rules, 'china_mihomo.list', is_china=True)
 
           # 处理国外规则
           print("=== 开始处理国外规则 ===")
@@ -163,11 +168,10 @@ jobs:
           # ⭐ 加入去重
           proxy_rules = dedupe_no_resolve_priority(proxy_rules)
 
-          # 生成标准规则文件
           generate_rule_file(proxy_rules, 'proxy.list', 'Proxy')
 
-          # 生成 Mihomo 格式文件
-          generate_mihomo_format(proxy_rules, 'proxy_mihomo.list', is_china=False)
+          # 生成 mihomo 格式的规则文件
+          generate_mihomo_format(china_rules, proxy_rules)
 
           print("所有规则处理完成！")
           EOF
@@ -178,17 +182,16 @@ jobs:
       - name: Check generated files
         run: |
           echo "检查生成的文件:"
-          ls -la china.list proxy.list china_mihomo.list proxy_mihomo.list
+          ls -la china.list proxy.list mihomo.list
           head -5 china.list
           head -5 proxy.list
-          head -5 china_mihomo.list
-          head -5 proxy_mihomo.list
+          head -5 mihomo.list
 
       - name: Commit and push changes
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git add china.list proxy.list china_mihomo.list proxy_mihomo.list
+          git add china.list proxy.list mihomo.list
           if git diff --staged --quiet; then
             echo "没有检测到变化"
           else
